@@ -4459,6 +4459,8 @@ operator|.
 name|getCoreFromAnyList
 argument_list|(
 name|name
+argument_list|,
+literal|false
 argument_list|)
 decl_stmt|;
 if|if
@@ -5049,6 +5051,8 @@ operator|.
 name|getCoreFromAnyList
 argument_list|(
 name|name
+argument_list|,
+literal|true
 argument_list|)
 decl_stmt|;
 if|if
@@ -5058,11 +5062,6 @@ operator|!=
 literal|null
 condition|)
 block|{
-name|core
-operator|.
-name|open
-argument_list|()
-expr_stmt|;
 return|return
 name|core
 return|;
