@@ -1651,6 +1651,7 @@ expr_stmt|;
 block|}
 block|}
 block|}
+comment|/* If you don't increment the reference count, someone could close the core before you use it. */
 DECL|method|getCoreFromAnyList
 specifier|protected
 name|SolrCore
@@ -1658,59 +1659,60 @@ name|getCoreFromAnyList
 parameter_list|(
 name|String
 name|name
+parameter_list|,
+name|boolean
+name|incRefCount
 parameter_list|)
 block|{
-name|SolrCore
-name|core
-decl_stmt|;
 synchronized|synchronized
 init|(
 name|modifyLock
 init|)
 block|{
+name|SolrCore
 name|core
-operator|=
+init|=
 name|cores
 operator|.
 name|get
 argument_list|(
 name|name
 argument_list|)
-expr_stmt|;
+decl_stmt|;
 if|if
 condition|(
 name|core
-operator|!=
-literal|null
-condition|)
-block|{
-return|return
-name|core
-return|;
-block|}
-if|if
-condition|(
-name|dynamicDescriptors
-operator|.
-name|size
-argument_list|()
 operator|==
-literal|0
+literal|null
 condition|)
 block|{
-return|return
-literal|null
-return|;
-comment|// Nobody even tried to define any transient cores, so we're done.
-block|}
-comment|// Now look for already loaded transient cores.
-return|return
+name|core
+operator|=
 name|transientCores
 operator|.
 name|get
 argument_list|(
 name|name
 argument_list|)
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|core
+operator|!=
+literal|null
+operator|&&
+name|incRefCount
+condition|)
+block|{
+name|core
+operator|.
+name|open
+argument_list|()
+expr_stmt|;
+block|}
+return|return
+name|core
 return|;
 block|}
 block|}
@@ -2320,6 +2322,8 @@ return|return
 name|getCoreFromAnyList
 argument_list|(
 name|name
+argument_list|,
+literal|false
 argument_list|)
 return|;
 comment|// we might have been _unloading_ the core, so return the core if it was loaded.
